Commit after testing

--- a/views/events/addevent/index.jade
+++ b/views/events/addevent/index.jade
@@ -9,8 +9,9 @@ block body
     form(method='post',action='/events/addevent/')
         input(type='hidden', name='_csrf', value='#{csrftoken}')
         div.form-group
-            label Event Name:
-            input.form-control(type='text',name='eventname')
+          label Event Name:
+          input.form-control(type='text', name='eventname')
+          span.help-block  
         div.formgroup
             label Event Description:
             input.form-control(type='text',name='eventdesc')
