--- a/layouts/default.jade
+++ b/layouts/default.jade
@@ -22,8 +22,8 @@ html
           ul.nav.navbar-nav
             li: a(href='/') Home
             li: a(href='/about/') About
-            li: a(href='/events/') Events
-            if !user.username
+            li: a(href='/events/myevents/') Events
+            if !user
                 li: a(href='/signup/') Sign Up
             li: a(href='/contact/') Contact
           ul.nav.navbar-nav.navbar-right
